start adding EditProfile functionality

--- a/src/main/resources/console/menu.properties
+++ b/src/main/resources/console/menu.properties
@@ -1,6 +1,11 @@
 exceptionNothingFound:        Nothing was found with given parameters
 exceptionResourceAccess:      Something wrong with the resource provided, check if it exists and readable
 tooManyAttempts:              Go, play some toys.\n
+menuProfile:                  \nPlease review profile settings, type parameter or several parameters after a corresponding keys if you want to change them. You can use full version of key like shown above or shorter versions below:\n\
+                              -n [name for the profile] -o [allow this profile to overwrite existing one with the same name. You can only set it to true, any parameters after this key will be ignored]\n\
+                              -up [name of existing profile to use] -p [path to file or folder (required)] -f [what to find in it (required)] -r [what to put in its place] -x [what to exclude] -fn [modify also file names (yes or no)] -sf [include subfolders in search (yes or no)] -np [naming pattern (file''s path that will be included in search)] -cs [name of charset to use in read and write operations] -sp [name for profile to save under (can be empty)]\n
+menuProfileWrongSetting:      Profile can''t be applied. Check again parameters for correctness.\n
+menuProfileGoBack:            You cannot cancel changes made in a profile, but they won''t be applied this time, and if you type ({0}) program will show previous menu or exit if no previous menu exists. You can also type one of main commands.\n
 menuGoBack:                   Type ({0}) to go back to previous menu (when no such exists, the program will exit) or type one of the main commands.\n
 menuResults:                  Type file''s number to see its details or type command ({0}) to make replacements.\n
 menuResultUnknownName:        unknown name
@@ -21,7 +26,7 @@ mainHelp: Program usage:\n\
           Main Commands:\n\
                         {0}: show help,\n{1}: exit program,\n{2}: skip preview.\n\n\
              Parameters:\n\
-                        -up [name of profile to use] -p [path to file or folder (required)] -f [what to find in it (required)] -r [what to put in its place] -x [what to exclude] -fn [modify also file names (yes or no)] -sf [include subfolders in search (yes or no)] -np [naming pattern (file''s path that will be included in search)] -cs [name of charset to use in read and write operations] -sp [name for profile to save under (can be empty, see details below)]\n\
+                        -up [name of existing profile to use] -p [path to file or folder (required)] -f [what to find in it (required)] -r [what to put in its place] -x [what to exclude] -fn [modify also file names (yes or no)] -sf [include subfolders in search (yes or no)] -np [naming pattern (file''s path that will be included in search)] -cs [name of charset to use in read and write operations] -sp [name for profile to save under (can be empty, see details below)]\n\
                         At least two parameters are required: -p [path to file or folder] -f [what to find in it], these parameters may also be included in a profile, so it is OK to specify just a profile with them.\n\n\
             Key details:\n\
                         {0}: Shows this info. This key is expected to be alone on command line.\n\
